--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header-row">
+                <a href="" class="header-logo">WebStudio</a>
+                <nav class="header-nav">
+                    <ul>
+                        <li><a href=""></a>Студия</li>
+                        <li><a href=""></a>Портфолио</li>
+                        <li><a href=""></a>Контакты</li>
+                    </ul>
+                </nav>
+                <div class="header-contacts">
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="home">
+            <div class="home-container">
+                <h1 class="home-headin">Эффективные решения для вашего бизнеса</h1>
+            </div>
+            <div class="home-btn">
+                <a href="" class="btn">Заказать услугу</a>
+            </div>
+        </section>
+        <section class="how-it-works">
+            <div class="container">
+                <div class="how-it-works-tasks">
+                    <div class="tasks-item">
+                        <h2 class="task-heading">Внимание к деталям</h2>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </div>
+                    <div class="tasks-item">
+                        <h2 class="task-heading">Пунктуальность</h2>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </div>
+                    <div class="tasks-item">
+                        <h2 class="task-heading">Планирование</h2>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </div>
+                    <div class="tasks-item">
+                        <h2 class="task-heading">Современные технологии</h2>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </div>
+                    <div class="classes-container">
+                        <h3 class="classes-headin">Чем мы занимаемся</h3>                    
+                    </div>
+                    <div class="img-container">
+                        <img src="../goit-markup-hw-01/img/box 1.jpg" alt="tasks img" width="">
+                        <img src="../goit-markup-hw-01/img/box 2.jpg" alt="tasks img" width="">
+                        <img src="../goit-markup-hw-01/img/box 3.jpg" alt="tasks img" width="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
