--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     </header>
     <main>
         <section class="home">
-            <div class="home-container">
-                <h1 class="home-headin">Эффективные решения для вашего бизнеса</h1>
-            </div>
-            <div class="home-btn">
-                <a href="" class="btn">Заказать услугу</a>
+            <div class="container">
+                <div class="home-content">
+                    <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>
+                </div>
+                <div class="home-btn">
+                    <a href="" class="btn">Заказать услугу</a>
+                </div>
             </div>
         </section>
         <section class="how-it-works">
@@ -57,13 +59,29 @@
                         <h3 class="classes-headin">Чем мы занимаемся</h3>                    
                     </div>
                     <div class="img-container">
-                        <img src="../goit-markup-hw-01/img/box 1.jpg" alt="tasks img" width="">
+                        <img src="../goit-markup-hw-01/" alt="tasks img" width="">
                         <img src="../goit-markup-hw-01/img/box 2.jpg" alt="tasks img" width="">
                         <img src="../goit-markup-hw-01/img/box 3.jpg" alt="tasks img" width="">
                     </div>
                 </div>
             </div>
         </section>
+        <section>
+            <div class="section team">
+                <div class="container">
+                    <div class="classes-container">
+                        <h3 class="classes-headin">Наша команда</h3>                    
+                    </div>
+                    <div class="our_team">
+                        <div class="team">
+                            <img src="/img/" alt="">
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
