--- a/index.html
+++ b/index.html
@@ -41,47 +41,86 @@
                 <div class="how-it-works-tasks">
                     <div class="tasks-item">
                         <h2 class="task-heading">Внимание к деталям</h2>
+                    <div class="tasks-item-text">
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </div>
                     </div>
                     <div class="tasks-item">
                         <h2 class="task-heading">Пунктуальность</h2>
+                    </div>
+                    <div class="tasks-item-text">
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </div>
                     <div class="tasks-item">
                         <h2 class="task-heading">Планирование</h2>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </div>
+                    <div class="tasks-item-text">
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </div>                    
                     <div class="tasks-item">
                         <h2 class="task-heading">Современные технологии</h2>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </div>
+                    <div class="tasks-item-text">
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </div>                
                     <div class="classes-container">
                         <h3 class="classes-headin">Чем мы занимаемся</h3>                    
                     </div>
                     <div class="img-container">
-                        <img src="../goit-markup-hw-01/" alt="tasks img" width="">
-                        <img src="../goit-markup-hw-01/img/box 2.jpg" alt="tasks img" width="">
-                        <img src="../goit-markup-hw-01/img/box 3.jpg" alt="tasks img" width="">
+                        <img src="../goit-markup-hw-01/img/box/box 1.jpg" alt="tasks img" width="">
+                        <img src="../goit-markup-hw-01/img/box/box 2.jpg" alt="tasks img" width="">
+                        <img src="../goit-markup-hw-01/img/box/box 3.jpg" alt="tasks img" width="">
                     </div>
                 </div>
             </div>
         </section>
-        <section>
-            <div class="section team">
+        <section class="section team">            
                 <div class="container">
                     <div class="classes-container">
                         <h3 class="classes-headin">Наша команда</h3>                    
                     </div>
                     <div class="our_team">
                         <div class="team">
-                            <img src="/img/" alt="">
+                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img.jpg" alt="ourteam_img" width="270">
+                            <h4 class="teams">Игорь Демьяненко</h4>
+                            <div class="teams-text">
+                                <p>Product Designer</p>
+                            </div>  
                         </div>
-
+                        <div class="team">
+                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img 1.jpg" alt="ourteam_img" width="270">
+                            <h4 class="teams">Ольга Репина</h4>
+                            <div class="teams-text">
+                                <p>Frontend Developer</p>
+                            </div>  
+                        </div>
+                        <div class="team">
+                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img 2.jpg" alt="ourteam_img" width="270">
+                            <h4 class="teams">Николай Тарасов</h4>
+                            <div class="teams-text">
+                                <p>Marketing</p>
+                            </div>  
+                        </div>
+                        <div class="team">
+                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img 3.jpg" alt="ourteam_img" width="270">
+                            <h4 class="teams">Михаил Ермаков</h4>
+                            <div class="teams-text">
+                                <p>UI Designer</p>
+                            </div>  
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-
+        </section>        
     </main>
+    <footer class="footer">
+        <div class="container">
+            <a href="" class="header-logo">WebStudio</a>
+            <div class="footer-contents">
+                <a href="" class="footer-content-address">г. Киев, пр-т Леси Украинки, 26</a>
+                <a href="mailto:info@example.com" class="footer-content-email">info@example.com</a>
+                <a href="tell:+380991111111" class="footer-content-phone">+38 099 111 11 11</a>
+            </div>                       
+        </div>
+    </footer>
 </body>
 </html>
