--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <h3 class="classes-headin">Чем мы занимаемся</h3>                    
                     </div>
                     <div class="img-container">
-                        <img src="../goit-markup-hw-01/img/box/box 1.jpg" alt="tasks img">
-                        <img src="../goit-markup-hw-01/img/box/box 2.jpg" alt="tasks img">
-                        <img src="../goit-markup-hw-01/img/box/box 3.jpg" alt="tasks img">
+                        <img src="../goit-markup-hw-01/img/box/box 1.jpg" alt="tasks-img">
+                        <img src="../goit-markup-hw-01/img/box/box 2.jpg" alt="tasks-img">
+                        <img src="../goit-markup-hw-01/img/box/box 3.jpg" alt="tasks-img">
                     </div>
                 </div>
             </div>
