--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <h3 class="classes-headin">Чем мы занимаемся</h3>                    
                     </div>
                     <div class="img-container">
-                        <img src="../goit-markup-hw-01/img/box/box 1.jpg" alt="tasks-img">
-                        <img src="../goit-markup-hw-01/img/box/box 2.jpg" alt="tasks-img">
-                        <img src="../goit-markup-hw-01/img/box/box 3.jpg" alt="tasks-img">
+                        <img src="../goit-markup-hw-01/img/box/box1.jpg" alt="tasks-img">
+                        <img src="../goit-markup-hw-01/img/box/box2.jpg" alt="tasks-img">
+                        <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img">
                     </div>
                 </div>
             </div>
@@ -88,21 +88,21 @@
                             </div>  
                         </div>
                         <div class="team">
-                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img 1.jpg" width="270" alt="ourteam_img">
+                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img1.jpg" width="270" alt="ourteam_img">
                             <h4 class="teams">Ольга Репина</h4>
                             <div class="teams-text">
                                 <p>Frontend Developer</p>
                             </div>  
                         </div>
                         <div class="team">
-                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img 2.jpg" width="270" alt="ourteam_img">
+                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img2.jpg" width="270" alt="ourteam_img">
                             <h4 class="teams">Николай Тарасов</h4>
                             <div class="teams-text">
                                 <p>Marketing</p>
                             </div>  
                         </div>
                         <div class="team">
-                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img 3.jpg" width="270" alt="ourteam_img">
+                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img3.jpg" width="270" alt="ourteam_img">
                             <h4 class="teams">Михаил Ермаков</h4>
                             <div class="teams-text">
                                 <p>UI Designer</p>
