--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>
                 </div>
                 <div class="home-btn">
-                    <a href="" class="btn">Заказать услугу</a>
+                    <button type="button">Заказать услугу</a>
                 </div>
             </div>
         </section>
