--- a/index.html
+++ b/index.html
@@ -1,126 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
-</head>
-<body>
-    <header class="header">
-        <div class="container">
-            <div class="header-row">
-                <a href="" class="header-logo">WebStudio</a>
-                <nav class="header-nav">
-                    <ul>
-                        <li><a href=""></a>Студия</li>
-                        <li><a href=""></a>Портфолио</li>
-                        <li><a href=""></a>Контакты</li>
-                    </ul>
-                </nav>
-                <div class="header-contacts">
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="home">
+<html lang="">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>WebStudio</title>
+    </head>
+    <body>
+        <header class="header">
             <div class="container">
-                <div class="home-content">
-                    <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>
-                </div>
-                <div class="home-btn">
-                    <button type="button">Заказать услугу</a>
-                </div>
-            </div>
-        </section>
-        <section class="how-it-works">
-            <div class="container">
-                <div class="how-it-works-tasks">
-                    <div class="tasks-item">
-                        <h2 class="task-heading">Внимание к деталям</h2>
-                    <div class="tasks-item-text">
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                    </div>
-                    </div>
-                    <div class="tasks-item">
-                        <h2 class="task-heading">Пунктуальность</h2>
-                    </div>
-                    <div class="tasks-item-text">
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                    </div>
-                    <div class="tasks-item">
-                        <h2 class="task-heading">Планирование</h2>
-                    </div>
-                    <div class="tasks-item-text">
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                    </div>                    
-                    <div class="tasks-item">
-                        <h2 class="task-heading">Современные технологии</h2>
-                    </div>
-                    <div class="tasks-item-text">
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </div>                
-                    <div class="classes-container">
-                        <h3 class="classes-headin">Чем мы занимаемся</h3>                    
-                    </div>
-                    <div class="img-container">
-                        <img src="../goit-markup-hw-01/img/box/box1.jpg" alt="tasks-img">
-                        <img src="../goit-markup-hw-01/img/box/box2.jpg" alt="tasks-img">
-                        <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img">
-                    </div>
+                <div class="header-row">            
+                    <nav class="header-nav">
+                        <a href="" class="header-logo">WebStudio</a>
+                        <ul>
+                            <li><a href="">Студия</a></li>
+                            <li><a href="">Портфолио</a></li>
+                            <li><a href="">Контакты</a></li>
+                            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+                            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+                        </ul>
+                    </nav>               
                 </div>
             </div>
-        </section>
-        <section class="section team">            
+        </header>
+        <main>
+            <section class="home">
                 <div class="container">
-                    <div class="classes-container">
-                        <h3 class="classes-headin">Наша команда</h3>                    
+                    <div class="home-content">
+                        <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>
                     </div>
-                    <div class="our_team">
-                        <div class="team">
-                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img.jpg" width="270" alt="ourteam_img">
-                            <h4 class="teams">Игорь Демьяненко</h4>
-                            <div class="teams-text">
-                                <p>Product Designer</p>
-                            </div>  
-                        </div>
-                        <div class="team">
-                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img1.jpg" width="270" alt="ourteam_img">
-                            <h4 class="teams">Ольга Репина</h4>
-                            <div class="teams-text">
-                                <p>Frontend Developer</p>
-                            </div>  
-                        </div>
-                        <div class="team">
-                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img2.jpg" width="270" alt="ourteam_img">
-                            <h4 class="teams">Николай Тарасов</h4>
-                            <div class="teams-text">
-                                <p>Marketing</p>
-                            </div>  
-                        </div>
-                        <div class="team">
-                            <img class="teams-img" src="../goit-markup-hw-01/img/ourteam/img3.jpg" width="270" alt="ourteam_img">
-                            <h4 class="teams">Михаил Ермаков</h4>
-                            <div class="teams-text">
-                                <p>UI Designer</p>
-                            </div>  
-                        </div>
+                    <div class="home-btn">
+                        <a href=""><button type="button">Заказать услугу</button></a>                    
                     </div>
                 </div>
-        </section>        
-    </main>
-    <footer class="footer">
-        <div class="container">
-            <a href="" class="header-logo">WebStudio</a>
-            <div class="footer-contents">
-                <a href="" class="footer-content-address">г. Киев, пр-т Леси Украинки, 26</a>
-                <a href="mailto:info@example.com" class="footer-content-email">info@example.com</a>
-                <a href="tell:+380991111111" class="footer-content-phone">+38 099 111 11 11</a>
-            </div>                       
-        </div>
-    </footer>
-</body>
+            </section>
+            <section class="how-it-works">
+                <h2>О нас</h2>
+                <ul>
+                    <li>
+                        <h3>Внимание к деталям</h3>
+                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3>Пунктуальность</h3>
+                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3>Планирование </h3>
+                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3>Современные технологии</h3>
+                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            <section>
+                <h2>Чем мы занимаемся</h2>
+                <ul>
+                <li>
+                    <img src="../goit-markup-hw-01/img/box/box1.jpg" alt="tasks-img"> 
+                </li>                         
+                <li>
+                    <img src="../goit-markup-hw-01/img/box/box2.jpg" alt="tasks-img"> 
+                </li>             
+                <li>
+                    <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img"> 
+                </li> 
+                </ul>
+            </section>    
+                    <h2>Наша команда</h2>
+                    <ul>
+                        <li>
+                            <img src="./img/ourteam/img.jpg" width="270" alt="Наша команда">
+                            <h3>Игорь Демьяненко</h3>
+                            <p>Product Designer</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="./img/ourteam/img1.jpg" width="270" alt="Наша команда">
+                            <h3>Ольга Репина</h3>
+                            <p>Frontend Developer</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="./img/ourteam/img2.jpg" width="270" alt="Наша команда">
+                            <h3>Николай Тарасов</h3>
+                            <p>Marketing </p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="./img/ourteam/img3.jpg" width="270" alt="Наша команда">
+                            <h3>Михаил Ермаков</h3>
+                            <p>UI Designer</p>
+                        </li>
+                    </ul>
+            </section>             
+        </main>
+        <footer class="footer">        
+            <address>г. Киев, пр-т Леси Украинки, 26</address>
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="tell:+380991111111">+38 099 111 11 11</a>                
+        </footer>
+    </body>
 </html>
