работа на ошибками
работа на ошибками

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +7,24 @@
         <title>WebStudio</title>
     </head>
     <body>
-        <header class="header">
-            <div class="container">
-                <div class="header-row">            
-                    <nav class="header-nav">
-                        <a href="" class="header-logo">WebStudio</a>
-                        <ul>
-                            <li><a href="">Студия</a></li>
-                            <li><a href="">Портфолио</a></li>
-                            <li><a href="">Контакты</a></li>
-                            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-                            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
-                        </ul>
-                    </nav>               
-                </div>
-            </div>
+        <header>        
+            <nav>               
+                <ul>
+                    <li><a href="" class="header-logo">WebStudio</a></li>
+                    <li><a href="">Студия</a></li>
+                    <li><a href="">Портфолио</a></li>
+                    <li><a href="">Контакты</a></li>
+                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+                </ul>
+            </nav>                             
         </header>
         <main>
             <section class="home">
                 <div class="container">
                     <div class="home-content">
-                        <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>
-                    </div>
-                    <div class="home-btn">
-                        <a href=""><button type="button">Заказать услугу</button></a>                    
+                        <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>                
+                        <p><button type="submit">Заказать услугу</button></p>                    
                     </div>
                 </div>
             </section>
@@ -99,7 +93,8 @@
                     </ul>
             </section>             
         </main>
-        <footer class="footer">        
+        <footer class="footer">
+            <a href="" class="header-logo">WebStudio</a>        
             <address>г. Киев, пр-т Леси Украинки, 26</address>
             <a href="mailto:info@example.com">info@example.com</a>
             <a href="tell:+380991111111">+38 099 111 11 11</a>                
