работа над ошибками
работа над ошибками

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="home-content">
                         <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>                
-                        <p><button type="submit">Заказать услугу</button></p>                    
+                        <a href=""><button type="submit">Заказать услугу</button></a>                   
                     </div>
                 </div>
             </section>
