--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     </head>
     <body>
         <header>        
-            <nav>               
-                <ul>
-                    <li><a href="" class="header-logo">WebStudio</a></li>
+            <nav>
+                <a href="" class="header-logo">WebStudio</a>            
+                <ul>                    
                     <li><a href="">Студия</a></li>
                     <li><a href="">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+                    <li><a href="">Контакты</a></li>                    
                 </ul>
-            </nav>                             
+            </nav>
+            <ul>
+               <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li> 
+               <li><a href="tel:+380961111111">+38 096 111 11 11</a></li> 
+            </ul>                             
         </header>
         <main>
             <section class="home">
@@ -48,6 +50,7 @@
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
+            </section>    
             <section>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
@@ -61,7 +64,8 @@
                     <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img"> 
                 </li> 
                 </ul>
-            </section>    
+            </section>
+            <section class="team">   
                     <h2>Наша команда</h2>
                     <ul>
                         <li>
