--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="container">
                     <div class="home-content">
                         <h1 class="title-headin">Эффективные решения для вашего бизнеса</h1>                
-                        <a href=""><button type="submit">Заказать услугу</button></a>                   
+                        <button type="submit">Заказать услугу</button>                 
                     </div>
                 </div>
             </section>
