--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </li>
                 </ul>
             </section>    
-            <section>
+            <section class="classes">
                 <h2>Чем мы занимаемся</h2>
                 <ul>
                 <li>
