--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="menu-container">
           <ul class="menu-list">
             <li class="menu-item"><a href="#" class="menu-list-item-link current">Студия</a></li>
-            <li class="menu-item"><a href="#" class="menu-list-item-link">Портфолио</a></li>
+            <li class="menu-item"><a href="portfolio.html" class="menu-list-item-link">Портфолио</a></li>
             <li class="menu-item"><a href="#" class="menu-list-item-link">Контакты</a></li>
           </ul>
         </div>
