--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="menu-list-item-link">Студия</a>
                     </li>
                     <li class="menu-item">
-                    <a href="#" class="menu-list-item-link current">Портфолио</a>
+                    <a href="#" class="menu-list-item-link current"></a>
                     </li>
                     <li class="menu-item">
                     <a href="#" class="menu-list-item-link">Контакты</a>
