--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <a href="index.html" class="logo" lang="en" title="WebStudio"><span class="accent">Web</span>Studio</a>
       <nav>
-        <div class="menu-container">
+        <div class="container">
           <ul class="menu-list">
             <li class="menu-item"><a href="#" class="menu-list-item-link current">Студия</a></li>
             <li class="menu-item"><a href="./portfolio.html" class="menu-list-item-link">Портфолио</a></li>
@@ -20,7 +20,7 @@
           </ul>
         </div>
       </nav>
-      <div class="top-contacts-container">
+      <div class="container">
         <ul class="top-contacts-list">
           <li class="top-contacts-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li class="top-contacts-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
