--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
     <footer class="footer">
       <a href="index.html" class="logo" lang="en">
           <span class="accent">Web</span>Studio</a>
-      <address class="address">
+       <address class="address">
           <ul class="address-footer-list">
-          <li><a href="#" class="address-link-place">г. Киев, пр-т Леси Украинки, 26</a></li>                
-          <li><a href="#" class="address-link-mail">info@example.com</a></li>
-          <li><a href="#" class="address-link-phone">+38 099 111 11 11</a></li>
-      </address>
-      </footer>
+            <li><a href="#" class="address-link-place">г. Киев, пр-т Леси Украинки, 26</a></li>                
+            <li><a href="mailto:info@devstudio.com" class="address-link-mail"> info@example.com</a></li>
+            <li><a href="tel:+380961111111" class="address-link-phone">+38 099 111 11 11</a></li>
+          </ul>
+       </address>
+    </footer>
   </body>
 </html>
