--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
           <h2 class="we-doing-subtitle">Чем мы занимаемся</h2>
           <ul class="we-doing-list">
             <li class="we-doing-item">
-              <img src="../goit-markup-hw-01/img/box/box1.jpg" alt="tasks-img" />
+              <img src="../goit-markup-hw-01/images/box1.jpg" alt="tasks-img" />
             </li>
             <li class="we-doing-item">
-              <img src="../goit-markup-hw-01/img/box/box2.jpg" alt="tasks-img" />
+              <img src="../goit-markup-hw-01/images/box2.jpg" alt="tasks-img" />
             </li>
             <li class="we-doing-item">
-              <img src="../goit-markup-hw-01/img/box/box3.jpg" alt="tasks-img" />
+              <img src="../goit-markup-hw-01/images/box3.jpg" alt="tasks-img" />
             </li>
           </ul>        
       </section>
@@ -90,22 +90,22 @@
           <h2 class="team-subtitle">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img src="./img/ourteam/img.jpg" width="270" alt="Наша команда" />
+              <img src="./images/ourteam.jpg" width="270" alt="Наша команда" />
               <h3>Игорь Демьяненко</h3>
               <p>Product Designer</p>
             </li>
             <li class="team-item">
-              <img src="./img/ourteam/img1.jpg" width="270" alt="Наша команда" />
+              <img src="./images/ourteam1.jpg" width="270" alt="Наша команда" />
               <h3>Ольга Репина</h3>
               <p>Frontend Developer</p>
             </li>
             <li class="team-item">
-              <img src="./img/ourteam/img2.jpg" width="270" alt="Наша команда" />
+              <img src="./images/ourteam2.jpg" width="270" alt="Наша команда" />
               <h3>Николай Тарасов</h3>
               <p>Marketing</p>
             </li>
             <li class="team-item">
-              <img src="./img/ourteam/img3.jpg" width="270" alt="Наша команда" />
+              <img src="./images/ourteam3.jpg" width="270" alt="Наша команда" />
               <h3>Михаил Ермаков</h3>
               <p>UI Designer</p>
             </li>
